Completed grid comparison

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
+    <div class="container" style="margin-bottom: 8rem">
       <div class="flex-container">
         <p class="box-1">Box 1</p>
         <div class="flex-container flex-column box-2">
@@ -18,6 +18,17 @@
           </div>
           <p class="box-3">Box 3</p>
         </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="grid-container">
+        <div class="box-one">Box One</div>
+        <div class="box-two">
+          <p>text on the left</p>
+          <p>text on the right</p>
+        </div>
+        <div class="box-three">Box Three</div>
       </div>
     </div>
   </body>
