Added flex box and flex grow practice

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container" style="margin-bottom: 8rem">
+    <!-- <div class="container" style="margin-bottom: 8rem">
       <div class="flex-container">
         <p class="box-1">Box 1</p>
         <div class="flex-container flex-column box-2">
@@ -21,7 +21,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container" style="margin-bottom: 8rem">
       <div class="grid-container">
         <div class="box-one">Box One</div>
         <div class="box-two">
@@ -29,6 +29,14 @@
           <p>text on the right</p>
         </div>
         <div class="box-three">Box Three</div>
+      </div>
+    </div> -->
+
+    <div class="container" style="margin-top: 10rem">
+      <div class="flex-container-item">
+        <div class="item item-one">Box 1</div>
+        <div class="item item-two">Box 2</div>
+        <div class="item item-three">Box 3</div>
       </div>
     </div>
   </body>
